--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>ivlev-back</description>
     <properties>
         <java.version>17</java.version>
+        <cloudinary.version>1.34.0</cloudinary.version>
     </properties>
     <dependencies>
         <dependency>
@@ -62,6 +63,17 @@
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>3.18.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-core</artifactId>
+            <version>${cloudinary.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>${cloudinary.version}</version>
         </dependency>
     </dependencies>
 
