--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.show_sql=true
 jwt_secret=Kotenok007!
 
 cloud_name=dphkmjgiy
-api_key=437352785774432
+api_key="437352785774432"
 api_secret=6rhJZtcDoaoopGNV8K46yv2WmKc
